--- a/Lustrious/Views/Cliente/Index.cshtml
+++ b/Lustrious/Views/Cliente/Index.cshtml
@@ -145,7 +145,7 @@
                     
                 <div class="acoes">
 
-					<form asp-action="EditarClliente" method="get">
+                        <form asp-action="EditarCliente" method="get">
 						<input type="hidden" name="id" value="@l.IdClient" />
 						<button type="submit" class="btn btn-editar">Editar</button>
 					</form>
