Fazendo o Design das pagina Cliente

--- a/Lustrious/Views/Funcionario/Index.cshtml
+++ b/Lustrious/Views/Funcionario/Index.cshtml
@@ -57,6 +57,7 @@
     header {
         z-index: 10;
         box-sizing: border-box;
+        border-bottom: 4px solid #c7b99e;
         background-color: #fff;
         padding: 10px 0;
     }
