HENRIQUE || Modificando a index Cliente

--- a/Lustrious/Views/Cliente/Index.cshtml
+++ b/Lustrious/Views/Cliente/Index.cshtml
@@ -63,7 +63,7 @@
         font-family: 'Times New Roman', serif;
     }
 
-    
+    /* NAVBAR */
     .navbar-container {
         background: white;
         border-bottom: 5px solid #b5954b;
