Criando o CriarCliente(teste)

--- a/Lustrious/Views/Cliente/CriarCliente.cshtml
+++ b/Lustrious/Views/Cliente/CriarCliente.cshtml
@@ -75,7 +75,7 @@
         font-weight: bold;
         cursor: pointer;
     }
-
+   <!-- Editar -->
     .editar {
         background: #c5bca2;
     }
