arrumando os botões excluir e editar

--- a/Lustrious/Views/Cliente/Index.cshtml
+++ b/Lustrious/Views/Cliente/Index.cshtml
@@ -47,8 +47,8 @@
                         <td>@cliente.Senha</td>
 
                         <td>
-                            <a class="edit-btn" href="/Cliente/Editar/@cliente.IdUser">EDITAR</a>
-                            <a class="delete-btn" href="/Cliente/Deletar/@cliente.IdUser">EXCLUIR</a>
+                            <a class="edit-btn"  asp-controller="Cliente" asp-action="EditarCliente" asp-route-id="@cliente.IdUser">EDITAR</a>
+                            <a asp-controller="Cliente" asp-action="ExcluirCliente" asp-route-id="@cliente.IdUser" class="delete-btn" ">EXCLUIR</a>
                         </td>
                     </tr>
                 }
