fazendo alterações no cliente para arrumar a foto

--- a/Lustrious/Views/Cliente/CriarCliente.cshtml
+++ b/Lustrious/Views/Cliente/CriarCliente.cshtml
@@ -51,11 +51,9 @@
  </div>
  </div>
 
- <label class="foto-container" for="fotoInput">
- <img src="~/imagens/capa_foto.png" class="foto-preview" />
- </label>
 
- <input type="file" id="fotoInput" name="fotoInput" style="display:none;" />
+
+		<input class="hint" type="file"  name="foto" accept="image/*" />
  </div>
 
  <div class="button-row">
